@@ -1,46 +1,51 @@
 // Copyright 2009, 2012 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.beans.system;
 
+import org.deltava.beans.GeoLocation;
+import org.deltava.beans.schedule.*;
+
 import org.deltava.util.*;
 import org.deltava.util.cache.Cacheable;
 
 /**
- * A bean to store CIDR address blocks.
+ * A bean to store IP address block information.
  * @author Luke
  * @version 5.0
  * @since 2.5
  */
 
-public class IPBlock implements Cacheable, Comparable<IPBlock> {
+public class IPBlock implements Cacheable, GeoLocation, Comparable<IPBlock> {
 	
+	private final GeoPosition _loc = new GeoPosition(0, 0);
+	
+	private final int _id;
 	private final String _baseAddr;
+	private final String _endAddr;
 	private final long _rawAddr;
-	private final long _endAddr;
 	private final int _bits;
+	
+	private Country _country;
+	private String _region;
+	private String _city;
 
 	/**
 	 * Initializes the bean.
-	 * @param addr the CIDR block
+	 * @param id the block ID
+	 * @param start the start IP address
+	 * @param end the ending IP address
+	 * @param size the CIDR size in bits
 	 */
-	public IPBlock(String addr) {
+	public IPBlock(int id, String start, String end, int size) {
 		super();
-		
-		// Split the address
-		int pos = addr.indexOf('/');
-		if (pos == -1) {
-			_baseAddr = addr;
-			_bits = 32;
-		} else {
-			_baseAddr = addr.substring(0, pos);	
-			_bits = StringUtils.parse(addr.substring(pos + 1), 32);
-		}
-		
-		_rawAddr = NetworkUtils.pack(_baseAddr);
-		_endAddr = _rawAddr + (1 << (32 - _bits));
+		_id = id;
+		_baseAddr = start;
+		_endAddr = end;
+		_bits = size;
+		_rawAddr = NetworkUtils.pack(start);
 	}
 
 	/**
-	 * Returns the base Address of the block
+	 * Returns the base Address of the address block.
 	 * @return the base IP address
 	 */
 	public String getAddress() {
@@ -60,7 +65,58 @@ public class IPBlock implements Cacheable, Comparable<IPBlock> {
 	 * @return the number of addresses in the block
 	 */
 	public int getSize() {
-		return (int) (_endAddr - _rawAddr);
+		return 1 << (32-_bits);
+	}
+	
+	/**
+	 * Returns the country associated with this IP address.
+	 * @return the Country
+	 * @see IPBlock#setCountry(Country)
+	 */
+	public Country getCountry() {
+		return _country;
+	}
+	
+	/**
+	 * Returns the region/state associated with this IP address.
+	 * @return the region name
+	 * @see IPBlock#setRegion(String)
+	 */
+	public String getRegion() {
+		return _region;
+	}
+	
+	/**
+	 * Returns the city associated with this IP address.
+	 * @return the city name
+	 * @see IPBlock#setCity(String)
+	 */
+	public String getCity() {
+		return _city;
+	}
+	
+	/**
+	 * Returns the city, region and country (if available).
+	 * @return the location
+	 */
+	public String getLocation() {
+		StringBuilder buf = new StringBuilder(32);
+		if (!StringUtils.isEmpty(_city))
+			buf.append(_city).append(", ");
+		if (!StringUtils.isEmpty(_region))
+			buf.append(_region).append(' ');
+		if (_country != null)
+			buf.append(_country.getCode());
+		
+		return buf.toString();
+	}
+	
+	public double getLatitude() {
+		return _loc.getLatitude();
+	}
+	
+	public double getLongitude() {
+		return _loc.getLongitude();
 	}
 	
 	/**
@@ -70,14 +126,51 @@ public class IPBlock implements Cacheable, Comparable<IPBlock> {
 	 */
 	public boolean contains(String addr) {
 		long intAddr = NetworkUtils.pack(addr);
-		return (intAddr >= _rawAddr) && (intAddr <= _endAddr);
+		return (intAddr >= _rawAddr) && (intAddr <= NetworkUtils.pack(_endAddr));
 	}
 
+	/**
+	 * Updates the country associated with this address block.
+	 * @param c the Country
+	 * @see IPBlock#getCountry()
+	 */
+	public void setCountry(Country c) {
+		_country = c;
+	}
+	
+	/**
+	 * Updates the region/state associated with this address block.
+	 * @param rgn the region name
+	 * @see IPBlock#getRegion()
+	 */
+	public void setRegion(String rgn) {
+		_region = rgn;
+	}
+	
+	/**
+	 * Updates the city associated with this address block.
+	 * @param city the city name
+	 * @see IPBlock#getCity()
+	 */
+	public void setCity(String city) {
+		_city = city;
+	}
+	
+	/**
+	 * Updates the location of this address block.
+	 * @param lat the latitude in degrees
+	 * @param lng the longitude in degrees
+	 */
+	public void setLocation(double lat, double lng) {
+		_loc.setLatitude(lat);
+		_loc.setLongitude(lng);
+	}
+	
 	/**
 	 * Compares two IP Ranges by comparing their base addresses and mask sizes.
 	 */
 	public int compareTo(IPBlock ib2) {
-		int tmpResult = new Long(_rawAddr).compareTo(new Long(ib2._rawAddr));
+		int tmpResult = Long.valueOf(_rawAddr).compareTo(Long.valueOf(ib2._rawAddr));
 		if (tmpResult == 0)
 			tmpResult = Integer.valueOf(_bits).compareTo(Integer.valueOf(ib2._bits));
 		
@@ -85,7 +178,7 @@ public class IPBlock implements Cacheable, Comparable<IPBlock> {
 	}
 	
 	public Object cacheKey() {
-		return toString();
+		return Integer.valueOf(_id);
 	}
 
 	public String toString() {
